--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,30 @@
 absl-py==1.0.0
 attrs==21.2.0
 beautifulsoup4==4.10.0
+black==21.10b0
+click==8.0.3
+colorama==0.4.4
 cycler==0.11.0
 fonttools==4.28.1
 kiwisolver==1.3.2
 matplotlib==3.5.0
 mediapipe==0.8.9
+mypy-extensions==0.4.3
 numpy==1.21.4
 opencv-contrib-python==4.5.4.58
 opencv-python==4.5.4.58
 packaging==21.2
 pandas==1.3.4
+pathspec==0.9.0
 Pillow==8.4.0
+platformdirs==2.4.0
 protobuf==3.19.1
 pyparsing==2.4.7
 python-dateutil==2.8.2
 pytz==2021.3
+regex==2021.11.10
 setuptools-scm==6.3.2
 six==1.16.0
 soupsieve==2.3.1
 tomli==1.2.2
+typing_extensions==4.0.0
